add references and other

--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -25,7 +25,15 @@
           </p>
         <h3>Do these results (skill requirements/ranking) affect your job choice?</h3>
           <p>
-          </p>
+            Stephen - While the skills required to seem extensive, and may require a lot of training and courses to perfect 
+            and grasp, especially in terms of the technical soft dev specific skills. It doesn't really change my mind on
+            programming as the option for me, due to the fact that although it is intensive and demanding, it’ll keep me 
+            occupied and busy, all the while providing me an in depth knowledge as to how IT systems work, and will evolve
+            in future. </br></br>
+            Daniel - 
+            </br></br>
+            Ella -
+         </p>
         </div>
       </div>
       <div>
@@ -152,6 +160,57 @@
             etc data. As human resources within the areas of data protection and collection will no longer be considered paramount in the survival
             of data attacks/theft, rather the servicing and protection of those AI will be considered the pinnacle of CS.
           </p>
+      </div>
+      <div class="refdiv">
+       <h2 class="refdiv">References</h2>
+       <h3 class="refdiv">Machine Learning</h3>
+       <p class="refdiv">
+         [1]V. Alex, "14 Deep and Machine Learning Uses That Made 2019 a New AI Age.", Medium, 2019. [Online]. Available: https://towardsdatascience.com/14-deep-learning-uses-that-blasted-me-away-2019-206a5271d98. [Accessed: 16- Apr- 2020].
+          </br></br>
+        [2]N. Heath, "What is machine learning? Everything you need to know | ZDNet", ZDNet, 2020. [Online]. Available: https://www.zdnet.com/article/what-is-machine-learning-everything-you-need-to-know/. [Accessed: 16- Apr- 2020].
+          </br></br>
+        [3]"Deep learning", En.wikipedia.org, 2019. [Online]. Available: https://en.wikipedia.org/wiki/Deep_learning#Definition. [Accessed: 16- Apr- 2020].
+          </br></br>
+        [4]R. Gour, "The Future of Machine Learning - DZone AI", dzone.com, 2018. [Online]. Available: https://dzone.com/articles/future-of-machine-learning-why-learn-machine-learn. [Accessed: 16- Apr- 2020].
+          </br></br>
+        [5]E. Lisowski, "Automated Machine Learning: What Tasks Can Be Improved", Addepto, 2019. [Online]. Available: https://addepto.com/automated-machine-learning-tasks-can-be-improved/. [Accessed: 16- Apr- 2020].
+          </br></br>
+        [6]A. Frazzetto, "What can machine learning do for your business right now?", CIO, 2018. [Online]. Available: https://www.cio.com/article/3276318/what-can-machine-learning-do-for-your-business-right-now.html. [Accessed: 16- Apr- 2020].
+       </p>
+       <h3 class="refdiv">Cyber Security</h3>
+       <p class="refdiv">
+        [1]N. Lord, "What is Cyber Security? Definition, Best Practices & More", Digital Guardian, 2019. [Online]. Available: https://digitalguardian.com/blog/what-cyber-security. [Accessed: 16- Apr- 2020].
+            </br></br>
+        [2]A. Stockham, "Top 10 Cybersecurity Innovations 2018 | Technology Insights | IN-PART", IN-PART, 2018. [Online]. Available: https://in-part.com/blog/top-10-cybersecurity-innovations-2018/. [Accessed: 17- Apr- 2020].
+            </br></br>
+        [3]T. Trends, "Advanced Cyber Security Innovations and Updates For 2020", Medium, 2019. [Online]. Available: https://medium.com/@akki.greatlearning/advanced-cyber-security-innovations-and-updates-for-2020-65b8d48fc256. [Accessed: 17- Apr- 2020].
+             </br></br>
+        [4]J. Melnick, "Top 10 Most Common Types of Cyber Attacks", Blog.netwrix.com, 2018. [Online]. Available: https://blog.netwrix.com/2018/05/15/top-10-most-common-types-of-cyber-attacks/. [Accessed: 17- Apr- 2020].
+       </p>
+       <h3 class="refdiv">Autonomous Vehicles</h3>
+        <p class="refdiv">
+          Alex Davies. 2020. Self-Driving Cars: The Complete Guide | WIRED. [ONLINE] Available at: https://www.wired.com/story/guide-self-driving-cars/. [Accessed 16 April 2020].
+              </br></br>
+          Federation Internationale de l'Automobile. 2020. Autonomous Vehicles | Federation Internationale de l'Automobile. [ONLINE] Available at: https://www.fia.com/autonomous-vehicles. [Accessed 16 April 2020].
+              </br></br>
+          McKinsey & Company. 2020. Ten ways autonomous driving could redefine the automotive world | McKinsey . [ONLINE] Available at: https://www.mckinsey.com/industries/automotive-and-assembly/our-insights/ten-ways-autonomous-driving-could-redefine-the-automotive-world. [Accessed 16 April 2020].
+              </br></br>
+          How-To Geek. 2020. What Are the Different Self-Driving Car “Levels” of Autonomy? . [ONLINE] Available at: https://www.howtogeek.com/401759/what-are-the-different-self-driving-car-levels-of-autonomy/. [Accessed 16 April 2020].
+              </br></br>
+          Andrew Yang. 2020. Ease the Transition to Self-Driving Vehicles - Yang2020 - Andrew Yang for President. [ONLINE] Available at: https://www.yang2020.com/policies/trucking-czar/. [Accessed 16 April 2020].
+        </p>
+        <h3 class="refdiv">BlockChain and CryptoCurrencies</h3>
+        <p class="refdiv">
+          Investopedia. 2020. Blockchain: Everything You Need to Know. [ONLINE] Available at: https://www.investopedia.com/terms/b/blockchain.asp. [Accessed 18 April 2020].
+              </br></br>
+          Sean Williams. 2020. 20 Real-World Uses for Blockchain Technology | The Motley Fool . [ONLINE] Available at: https://www.fool.com/investing/2018/04/11/20-real-world-uses-for-blockchain-technology.aspx. [Accessed 18 April 2020].
+              </br></br>
+          Andrew Tar. 2020. Proof-of-Work, Explained | Cointelegraph. [ONLINE] Available at: https://cointelegraph.com/explained/proof-of-work-explained. [Accessed 18 April 2020].
+              </br></br>
+          CoinSutra - Bitcoin Community. 2020. What Is A Masternode And How Is It Useful For Cryptocoin Investors. [ONLINE] Available at: https://coinsutra.com/masternodes/. [Accessed 18 April 2020].
+              </br></br>
+          Blockgeeks. 2020. What is Cryptocurrency: [Everything You Need To Know!]. [ONLINE] Available at: https://blockgeeks.com/guides/what-is-cryptocurrency/. [Accessed 18 April 2020].
+        </p>
       </div>
     </div>
   </body>
