IT work section

--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -40,7 +40,78 @@
       <div>
         <h2>IT Work</h2>
         <div class="paragraph">
-          <p></p>
+          <p>Our group interviewed Malcolm Watts, who currently works in ICT and as an implementation partner.</p>
+          <h3>What kind of work is done by the IT professional?<h3>
+          <p>
+            For most of his clients, Malcolm serves as their IT department, helping with any day-to-day troubleshooting, 
+            as well as setting up computers, systems and networks. He considers himself a ‘jack-of-all-trades’ when it 
+            comes to his work - doing anything from replacing IT equipment to implementing clients’ software systems. 
+            He does a lot of work setting up machines (hardware management) - this involves both the physical set up, 
+            and researching the systems and technology for his clients. He also does network maintenance - especially in 
+            the current situation with Covid-19, he is having to ensure that all his clients have remote access to files, 
+            servers and programs to be able to work from home. This involves setting up VPNs (Virtual Private Networks) 
+            and managing credentials for individual access to these networks. Malcolm says that personally, he finds himself 
+            doing very little scripting in his current position, however he is looking at automating some of the work he is 
+            doing currently for clients.</br></br>
+            A lesser aspect of his work is also working on some projects, including a timesheet management program that his 
+            company developed. This project involves a lot of design work - system architecture and user-experience design. 
+            Running the program also involves designing databases and data structures.
+          </p>
+          <h3>What kinds of people does the IT professional interact with? </br>
+            Are they other IT professionals? Clients? Investors? The general public?</h3>
+          <p>Malcolm has a small company, so aside from the few IT professionals within his company, he interacts mostly with 
+            clients. These are generally professional services providers - for example, he has done work for several 
+            environmental management companies. Since he works mostly with clients, he doesn’t have any significant degree of 
+            interaction with the general public.</br></br>
+            Previously, when the company’s biggest project - the timesheet program - was in early development, he also worked 
+            with a company who was sponsoring the program, however he doesn’t work much with investors at the moment.
+          </p>
+          <h3>Where does the IT professional spend most of their time?</h3>
+          <p>
+            Malcolm spends his time split between the shared office space and clients’ offices. He also will often have to do 
+            work at home, which is possible both because he runs a small company and much of the work he does is very feasible 
+            to do remotely. Some days, Malcolm will go to the office, and then continue work at home. Generally, his days with 
+            clients are set each week, however he may have to go to their offices at other times if there is an urgent issue 
+            or a large change. One example for this is that he flew to a client’s office in Sydney recently because they were 
+            undergoing major changes to their system which he had to oversee.
+          </p>
+          <h3>What aspect of their position is most challenging?</h3>
+          <p>
+            The aspect of his position which he finds the most challenging is administration tasks such as invoicing, 
+            timesheets and accounting. Another thing that he finds difficult is sales and marketing - he learned that as a 
+            small IT company, you need more than just IT professionals; you need someone who will help attract clients and customers.
+            </br></br>Malcolm also says that he finds that, when working with non-IT professionals, you need to maintain good 
+            interpersonal skills, as people can become very stressed or upset when their systems aren’t working properly and 
+            they can’t complete their own work. He finds that he has had to develop the ability to stay very calm and level-headed 
+            when his clients are potentially very angry or upset. 
+          </p>
+          <h3>An example of the work the IT professional does that best captures the essence of the IT industry?</h3>
+          <p>
+            Malcolm says that for him, this would have to be implementing a hybrid environment for a company that uses large data 
+            sets, and has distributed users (i.e. spread across multiple offices, cities or countries). He says the steps to this are: </br>
+            <ul>
+              <li>Defining the issue that needs a solution.</li>
+              <li>Choosing or researching potential solutions which will fulfill the requirements of the company.</li>
+              <li>Understanding the complexities of each of the potential solutions, such as set-up costs, maintenance requirements 
+                and the limitations of the business resources such as their budget.</li>
+              <li>Creating a proposal for the company based on your recommendations as the IT professional, outlining the strengths 
+                and weaknesses of the various approaches.</li>
+              <li>There is the potential for a trail phase - if possible, you may have access to trial software systems or hardware.</li>
+              <li>Once approved, moving to an implementation phase, which firstly involves designing a set up approach.</li>
+              <li>Then, acquiring resources, which could be cloud services or physical equipment.</li>
+              <li>Building and running a pilot program, which typically involves a small number of people to iron out any bugs - a 
+                small test-run within the business. Then fixing any issues that may be found.</li>
+              <li>Change management - making sure that the company’s employees know what’s happening and what adjustments they will 
+                need to make to be able to use the new systems (including training employees in the new system).</li>
+              <li>Implementing the system across the whole company - depending on the size of the company, this might happen in one 
+                go, it might be staged, or it might be on an as-needed basis.</li>
+              <li>From there on, there will also be system maintenance.</li>
+            </ul>
+            </br></br>Malcolm says that the people who may be involved with a job like this are a project manager, user liaison, the 
+            client themselves, technical staff (ICT professionals, network professionals, database experts), and help-desk staff, among others.
+            </br></br>He also made note that since the IT industry is quite broad, he feels that many IT professionals would have different 
+            perspectives for this question, as there are many aspects to the IT industry.
+          </p>
         </div>
       </div>
      <div>
