--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -41,8 +41,8 @@
       <div>
         <h2>IT Work</h2>
         <div class="paragraph">
-          <p>Our group interviewed Malcolm Watts, who currently works in ICT and as an implementation partner.</p>
-          <h3>What kind of work is done by the IT professional?<h3>
+          <p>Our group interviewed Malcolm Watts, who currently works in ICT and as an implementation partner.</br></p>
+          <h3>What kind of work is done by the IT professional?</h3>
           <p>
             For most of his clients, Malcolm serves as their IT department, helping with any day-to-day troubleshooting, 
             as well as setting up computers, systems and networks. He considers himself a ‘jack-of-all-trades’ when it 
@@ -56,7 +56,7 @@
             doing currently for clients.</br></br>
             A lesser aspect of his work is also working on some projects, including a timesheet management program that his 
             company developed. This project involves a lot of design work - system architecture and user-experience design. 
-            Running the program also involves designing databases and data structures.
+            Running the program also involves designing databases and data structures.</br></br>
           </p>
           <h3>What kinds of people does the IT professional interact with? </br>
             Are they other IT professionals? Clients? Investors? The general public?</h3>
@@ -65,7 +65,7 @@
             environmental management companies. Since he works mostly with clients, he doesn’t have any significant degree of 
             interaction with the general public.</br></br>
             Previously, when the company’s biggest project - the timesheet program - was in early development, he also worked 
-            with a company who was sponsoring the program, however he doesn’t work much with investors at the moment.
+            with a company who was sponsoring the program, however he doesn’t work much with investors at the moment.</br></br>
           </p>
           <h3>Where does the IT professional spend most of their time?</h3>
           <p>
@@ -74,7 +74,7 @@
             to do remotely. Some days, Malcolm will go to the office, and then continue work at home. Generally, his days with 
             clients are set each week, however he may have to go to their offices at other times if there is an urgent issue 
             or a large change. One example for this is that he flew to a client’s office in Sydney recently because they were 
-            undergoing major changes to their system which he had to oversee.
+            undergoing major changes to their system which he had to oversee.</br></br>
           </p>
           <h3>What aspect of their position is most challenging?</h3>
           <p>
@@ -84,7 +84,7 @@
             </br></br>Malcolm also says that he finds that, when working with non-IT professionals, you need to maintain good 
             interpersonal skills, as people can become very stressed or upset when their systems aren’t working properly and 
             they can’t complete their own work. He finds that he has had to develop the ability to stay very calm and level-headed 
-            when his clients are potentially very angry or upset. 
+            when his clients are potentially very angry or upset. </br></br>
           </p>
           <h3>An example of the work the IT professional does that best captures the essence of the IT industry?</h3>
           <p>
