--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -41,7 +41,7 @@
       <div>
         <h2>IT Work</h2>
         <div class="paragraph">
-          <p>Our group interviewed Malcolm Watts, who currently works in ICT and as an implementation partner.</br></p>
+          <p>Our group interviewed Malcolm Watts, who currently works in ICT and as an implementation partner.</br></br></p>
           <h3>What kind of work is done by the IT professional?</h3>
           <p>
             For most of his clients, Malcolm serves as their IT department, helping with any day-to-day troubleshooting, 
@@ -108,7 +108,7 @@
                 go, it might be staged, or it might be on an as-needed basis.</li>
               <li>From there on, there will also be system maintenance.</li>
             </ul>
-            </br></br>Malcolm says that the people who may be involved with a job like this are a project manager, user liaison, the 
+            </br>Malcolm says that the people who may be involved with a job like this are a project manager, user liaison, the 
             client themselves, technical staff (ICT professionals, network professionals, database experts), and help-desk staff, among others.
             </br></br>He also made note that since the IT industry is quite broad, he feels that many IT professionals would have different 
             perspectives for this question, as there are many aspects to the IT industry.
