add project content

--- a/html/project.html
+++ b/html/project.html
@@ -16,4 +16,58 @@
         <a href="IT-report.html">IT Report</a>
         <a href="project.html">Project</a>
       </div>
+      <h2>Project<h2>
+      <p>
+        When our group decided to suggest creating a project which incorporates different aspects of ALL our individuals 
+        ideas in assignment 1, we spent a significant portion of a group meeting attempting to all agree on the outcome,
+        with individuals disagreeing on the expectation or overarching involvement and dependency of coding, or for example 
+        the simplicity of the suggested project prompt. These disagreements and deliberations eventually led to the group 
+        selecting Stephen’s ‘Performance Tracking Glasses’, as it had met the most or at least one of the group requirements 
+        for each individual within the group.
+      </p>
+      <p>
+        These specifications ranged from the involvement of coding using things such as javascript and IOS/Android app 
+        launchers/development tools to produce the apps, as specified by both Stephen and Daniel. To things such as the 
+        creation/design of UI, and the necessity of data stores and collection, as brought up by Ella and William respectively. 
+        These Performance Tracking Glasses (PTG) refers to the creation of a both a physical and software product, by which 
+        individuals will have the ability to track and monitor their performance based on pre-existing software tools such as 
+        google maps. 
+      </p>
+      <p>
+        Specifications and details of the Service (Old specifications with minimal elaboration):</br>
+        This project requires the creation of glasses with UI compatible lenses (which exist), which will allow the user to 
+        select what will be displayed on each frame (separate, independant lenses) based on their needs. These glasses will 
+        be based around bluetooth connectivity, by which as the user completes tasks it will transmit the data (performance) 
+        to the app on the users phone or smart watch(co-dependant), to provide direct and real time feedback based on a query 
+        of results preset by the system (base data that the user enters and the expectations they want to meet when creating 
+        a profile for the app). 
+      </p>
+      <p>
+        However, while a service such as this would be amazing, there are a variety of limitations to such a project, that will 
+        require an extensive amount of time or a substitution/ change to the original view. For example, how will the device be 
+        charged if the design calls for the use of bluetooth connectivity, if a battery is used how will that affect the final 
+        design or will the application be entirely online, preventing the use the product (or some features) as the data stores 
+        requires access by the user to complete comparisons of the user data and accumulated users data. These are just some up 
+        a few of the ideas and questions our team brought up and discussed, providing the new outline for the PTG.
+      </p>
+      <p>It will include: (group deliberation and points):
+        <ul>
+          <li>Bluetooth connectivity to the application on the smart device, as it will be the easiest way to allow the device 
+            to connect, without forcing the user to rely on a cabled connection, which would not only minimise the devices that 
+            could be connected to the phone and or smart watch (it also doesn't look good having a cable wrapping up from your 
+            pocket or hand to the glasses frame).</li>
+          <li>Due to the fact that this device was created to be a bluetooth dependant device, the glasses frame would need to 
+            be modified in such a way as to allow for battery space, allowing for the device to stay active for at least 2 hours 
+            minimum before recharge.</li>
+          <li>A UI intensity adjustment wheel which can be found on the glasses frame, meaning that the user can change the 
+            brightness of the display on the fly.</li>
+          <li>ALL display options (display choices for the UI) will need to be selected and set from an interface tab/ screen in 
+            the application.</li>
+          <li>The application will require the user to have a WIFI/4G connection to access the features of the app, as the data 
+            and info will be stored on the companies servers (possibly a cloud service or a server side data store).</li>
+          <li>The glasses frame (the hook that goes around the ears) will contain wireless earphone tech that will allow the user 
+            to not only access the application and track performance, but also allow the user to select and listen to music.</li>
+        </ul>
+      </p>
+    </div>
   </body>
