--- a/html/project.html
+++ b/html/project.html
@@ -16,7 +16,7 @@
         <a href="IT-report.html">IT Report</a>
         <a href="project.html">Project</a>
       </div>
-      <h2>Project<h2>
+      <h2>Project</h2>
       <p>
         When our group decided to suggest creating a project which incorporates different aspects of ALL our individuals 
         ideas in assignment 1, we spent a significant portion of a group meeting attempting to all agree on the outcome,
