--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -24,6 +24,13 @@
           </p>
         <h3>Set of skills required for the applicable job titles</h3>
           <p>
+            Stephens ideal job Software Development was the highest in rank among the group members sitting at 20th out of 201 
+            in the data set provided with 337 job posting within the year that’s an avg of 0.93 a day. </br></br>
+            The runner up was Ella and Daniel’s with Senior Front-end developer ranking 23rd out of 201 and the number of job 
+            postings reflect this being a 303 within a year average making in only a 0.1 difference at 0.83 jobs posted per day.</br></br>
+            Last was William’s with his ideal job in Data Science which did not appear on this data set the nearest equivalent
+            being Data Engineer which was 39th out of 201 with only 182 job postings within the year that is an abysmally 
+            average of 0.49 job postings per day.</br>
           </p>
         <h3>Do these results (skill requirements/ranking) affect your job choice?</h3>
           <p>
@@ -32,9 +39,17 @@
             programming as the option for me, due to the fact that although it is intensive and demanding, it’ll keep me 
             occupied and busy, all the while providing me an in depth knowledge as to how IT systems work, and will evolve
             in future. </br></br>
-            Daniel - 
-            </br></br>
-            Ella -
+            Daniel - I see Web and Front end development as a natural progression of my current skill set, so this is why 
+            I chose this in the first place. I am surprised by its ranking as low as it did. I believe I had a good understanding 
+            of the skill requirements before choosing this career path. I also think that depending on which organisation the 
+            job is being offered in the choice can vary greatly in what is being asked of the position. In my ongoing study of 
+            the IT profession I am recognising that the huge variety of options available and am open to following new paths and 
+            there are a lot of interesting areas and exciting future careers available. </br></br>
+            Ella - These skills and rankings actually confirm my desire to become a web developer. I enjoy web development because 
+            I love how the creativity of designing the user interface and experience combines with the logic and technicality of 
+            programming, however I have been unsure of it as a career choice due to the increasing availability of platforms such
+            as Wordpress, Wix, and other similar website-building platforms. These allow people to build dynamic websites with 
+            little-to-no programming ability, so I fear that being a web developer will become a far less in-demand.
          </p>
         </div>
       </div>
