--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -34,6 +34,11 @@
           </p>
         <h3>Do these results (skill requirements/ranking) affect your job choice?</h3>
           <p>
+            None of our opinions on our ideal jobs have changed due to the fact that all of us mainly chose our 
+            ideal jobs with a focus of ideal workplace environment and the type of work we want to achieve and not based 
+            on workplace security and workforce statistics  
+          </p>
+          <p>
             Stephen - While the skills required to seem extensive, and may require a lot of training and courses to perfect 
             and grasp, especially in terms of the technical soft dev specific skills. It doesn't really change my mind on
             programming as the option for me, due to the fact that although it is intensive and demanding, it’ll keep me 
@@ -50,7 +55,32 @@
             programming, however I have been unsure of it as a career choice due to the increasing availability of platforms such
             as Wordpress, Wix, and other similar website-building platforms. These allow people to build dynamic websites with 
             little-to-no programming ability, so I fear that being a web developer will become a far less in-demand.
-         </p>
+          </p>
+          <h3>How do the IT-specific skills in your required skill set rank in terms of demand from employers?</h3>
+          <p>
+            Basic SQL is one of the most demand IT specific skills making up almost 10% of the whole IT skills demand. 
+            The next runner up is javascript and java which just like basic sql takes up a massive near 15% of  IT skills with SQL 
+            making up one 4th of all demand. The next is Git which makes up roughly 2.7% of the whole skill demand. 
+          </p>
+          <h3>How do the general skills in your required skill set rank in terms of demand from employers?</h3>
+          <p>
+            When it comes to general skills the highest is communication skills by far due the fact that is the most general and 
+            versatile skill in the modern workplace and is usable in every occupation causing communication skills too far out pace 
+            any skill in the data set. The runner up with under half the demand of the previous skill is problem solving skills again 
+            a very general and versatile skill in the modern workplace and is usable in every occupation. After that, writing skills 
+            are the fourth highest general skill.
+          </p>
+          <h3>What are the three highest ranked IT-specific skills which are not in your required skill set?</h3>
+          <p>
+            The three highest demand IT skills not needed are Microsoft Windows, project management and S.A.P. We feel the reason 
+            we do not need these skills despite their high demand is because this software is mostly used for careers in IT focusing 
+            on business and financial management.
+          </p>
+          <h3>What are the three highest ranked general skills which are not in your required skill set?</h3>
+          <p>
+            The three highest-ranked general skills which are not in our skill set are teamwork at 5th, troubleshooting at 6th, and
+            planning in 7th. 
+          </p>
         </div>
       </div>
       <div>
