--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -27,7 +27,7 @@
             postings reflect this being a 303 within a year average making in only a 0.1 difference at 0.83 jobs posted per day.</br></br>
             Last was William’s with his ideal job in Data Science which did not appear on this data set the nearest equivalent
             being Data Engineer which was 39th out of 201 with only 182 job postings within the year that is an abysmally 
-            average of 0.49 job postings per day.</br>
+            average of 0.49 job postings per day.</br></br>
           </p>
         <h3>Set of skills required for the applicable job titles</h3>
           <p>
@@ -54,13 +54,13 @@
             I love how the creativity of designing the user interface and experience combines with the logic and technicality of 
             programming, however I have been unsure of it as a career choice due to the increasing availability of platforms such
             as Wordpress, Wix, and other similar website-building platforms. These allow people to build dynamic websites with 
-            little-to-no programming ability, so I fear that being a web developer will become a far less in-demand.
+            little-to-no programming ability, so I fear that being a web developer will become a far less in-demand.</br></br>
           </p>
           <h3>How do the IT-specific skills in your required skill set rank in terms of demand from employers?</h3>
           <p>
             Basic SQL is one of the most demand IT specific skills making up almost 10% of the whole IT skills demand. 
             The next runner up is javascript and java which just like basic sql takes up a massive near 15% of  IT skills with SQL 
-            making up one 4th of all demand. The next is Git which makes up roughly 2.7% of the whole skill demand. 
+            making up one 4th of all demand. The next is Git which makes up roughly 2.7% of the whole skill demand. </br></br>
           </p>
           <h3>How do the general skills in your required skill set rank in terms of demand from employers?</h3>
           <p>
@@ -68,13 +68,13 @@
             versatile skill in the modern workplace and is usable in every occupation causing communication skills too far out pace 
             any skill in the data set. The runner up with under half the demand of the previous skill is problem solving skills again 
             a very general and versatile skill in the modern workplace and is usable in every occupation. After that, writing skills 
-            are the fourth highest general skill.
+            are the fourth highest general skill.</br></br>
           </p>
           <h3>What are the three highest ranked IT-specific skills which are not in your required skill set?</h3>
           <p>
             The three highest demand IT skills not needed are Microsoft Windows, project management and S.A.P. We feel the reason 
             we do not need these skills despite their high demand is because this software is mostly used for careers in IT focusing 
-            on business and financial management.
+            on business and financial management.</br></br>
           </p>
           <h3>What are the three highest ranked general skills which are not in your required skill set?</h3>
           <p>
