--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -31,6 +31,22 @@
           </p>
         <h3>Set of skills required for the applicable job titles</h3>
           <p>
+            General skills: </br>
+              <ul>
+                <li> Interpersonal / verbal communication </li>
+                <li> Written communication </li>
+                <li> Problem solving </li>
+                <li> Self-management </li>
+              </ul>
+            </br>
+            IT skills: </br>
+              <ul>
+                <li>Java, SQL, Javascript, PHP, HTML5</li>
+                <li>Data management, statistics, calculus, linear algebra</li>
+                <li>Cloud platforms, GIT</li>
+                <li>Machine Learning</li>
+                <li>User experience and user interface design</li>
+              </ul>
           </p>
         <h3>Do these results (skill requirements/ranking) affect your job choice?</h3>
           <p>
