--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="index.html">Home</a>
       <a href="html/IT-report.html">IT Report</a>
       <a href="html/project.html">Project</a>
-      <a href="pdf.html">Report PDF</a>
+      <a href="html/pdf.html">Report PDF</a>
     </div>
     <div class="sect" id="pInfo">
       <h2 class="tophead">Personal Information</h2>
