--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -56,6 +56,9 @@
             on workplace security and workforce statistics  
           </p>
           <p>
+            William - I believe that my opinions on my ideal jobs have changed due to the fact that i mainly chose my ideal jobs
+            with a focus of ideal workplace environment and the type of work i want to achieve and not based on workplace security 
+            and workforce statistics.</br></br>
             Stephen - While the skills required to seem extensive, and may require a lot of training and courses to perfect 
             and grasp, especially in terms of the technical soft dev specific skills. It doesn't really change my mind on
             programming as the option for me, due to the fact that although it is intensive and demanding, it’ll keep me 
@@ -220,7 +223,7 @@
           </p>
           <h3>What is it's likely Impact?</h3>
           <p>
-            As I briefly touched upon with the ‘What does it Do?’ section of this technology, i stated that in future these automated machine
+            As briefly touched upon with the ‘What does it Do?’ section of this technology, it was stated that in future these automated machine
             learning ANN’s would be able to take over certain industrial jobs though RPA (Robotic Process Automation). Which to summarise is
             the process of an ANN completing predictions and using/ obtaining/interpreting inputs without the need for human input (but the
             machine MUST be somewhat configured prior with test data). </br></br>
