--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -326,12 +326,12 @@
             </br></br>
             Yet as we are progressing towards this full autonomy a scale has been created to define the five stages of vehicular autonomy;
             <ul>
-              <li>Level Zero: No Automation - This represents vehicles as we know them today, 100% controlled by the human occupant.</li>
-              <li>Level One: Driver Assistance - This is assistance with steering or braking e.g ACC Adaptive cruise control.</li>
-              <li>Level Two: Partial Automation - This is assistance with steering and braking, whilst still requiring human input. General Motors and Tesla are already selling this level of automation.</li>
-              <li>Level Three: Conditional Automation - This is the current barrier within car automation. It requires the driver to still be available but not actively following the cars driving. Whilst maintaining the ability to take over driving at some point.</li>
-              <li>Level Four: High Automation - Is a fully automated vehicle but one that is limited to certain situations or conditions. No human control is needed.</li>
-              <li>Level Five: Full Automation - This is the goal, the car drives you and you are free to spend the time as you wish. These vehicles may be built with or begin to have no availability for human drive at all.</li>
+              <li><b>Level Zero: No Automation</b> - This represents vehicles as we know them today, 100% controlled by the human occupant.</li>
+              <li><b>Level One: Driver Assistance</b> - This is assistance with steering or braking e.g ACC Adaptive cruise control.</li>
+              <li><b>Level Two: Partial Automation</b> - This is assistance with steering and braking, whilst still requiring human input. General Motors and Tesla are already selling this level of automation.</li>
+              <li><b>Level Three: Conditional Automation</b> - This is the current barrier within car automation. It requires the driver to still be available but not actively following the cars driving. Whilst maintaining the ability to take over driving at some point.</li>
+              <li><b>Level Four: High Automation</b> - Is a fully automated vehicle but one that is limited to certain situations or conditions. No human control is needed.</li>
+              <li><b>Level Five: Full Automation</b> - This is the goal, the car drives you and you are free to spend the time as you wish. These vehicles may be built with or begin to have no availability for human drive at all.</li>
             </ul>
             </br> 
             The possible impact of this technology stands to change the world in as many ways as any technology before it. Possibly since the invention of the car itself. When you consider the application of these technologies to being all forms of transport it is easy to recognise this represents a fundamental change in society, urban environments, ownership, government and industry. Yet it is something that will not happen all at once because of it being many different technologies being developed and combined in a variety of ways.</br></br>
